Lab2/lab2review.txt
5 pts

Correctness:

- The program has a compiling error:
$ javac *.java
ManWolf.java:54: error: ';' expected
               case 'g': return q5
                                  ^
1 error



Style:

- Both files have major style problems. You are not following the style
  guidelines.

- Incorrect indentation in both the driver and ManWolf files. Please use a
  two-space indentation.

- Poor block comments

- Both files are missing the header. Remember: Each file must have a block
  comment at the top which gives the name of the file, the student's name, the
  assignment, the date, the version, and a comment about what is contained in
  the file. For example:
/**
 * file: SinglyLinkedList.java
 * author: student name
 * course: CMPT 220
 * assignment: project 1
 * due date: August 30, 2003
 * version: 1.3
 * 
 * This file contains the declaration of the SinglyLinkedList abstract data
 * type.
 */

- Both files have incorrect method header formatting. Each function must have a
  comment block before it, which gives the function name, describes each
  parameter and the return value (if any), and explains the purpose of the
  function. Refer to the parameters by name, not by type. Here is an example:
/**
 * factorial
 *
 * This function computes the factorial of the given input. The factorial is
 * defined as factorial(n) = n! = n * (n-1) * (n-2) * ... * 3 * 2 * 1.
 * 
 * Parameters:
 *   n: the number on which to compute the factorial
 * 
 * Return value: the factorial of n, or 1 if n <= 0.
 */
public static int factorial(int n) {
  if (n <= 0) {
    return 1;
  }
  return n * factorial(n - 1);
}

- Classes do not have a description. Each class declaration must have a comment
  block before it, which gives the class name and describes the purpose of the
  class. Here is an example:
/**
 * SinglyLinkedList
 * 
 * This class implements a linked list with single forward links, and supports
 * dynamic addition and deletion of nodes. 
 */
public class SinglyLinkedList {
  // ...
}


Efficiency and Other Comments:

- Program seems efficient as implemented, but I could not be sure if it is not
  compiling.


CSV files:

- State-transition table looks good.

- Usually the description of states only includes the state and its
  corresponding description, not a repetition of the state-transitions.

- Dr. Rivas
